Add profile image and user name

--- a/FirebaseAuthenticationExample/FirebaseAuthenticationExample/Base.lproj/Main.storyboard
+++ b/FirebaseAuthenticationExample/FirebaseAuthenticationExample/Base.lproj/Main.storyboard
@@ -327,7 +327,7 @@
                                     <constraint firstAttribute="width" constant="300" id="xXr-Y2-bc9"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <color key="textColor" red="0.92146831750869751" green="0.92162626981735229" blue="0.92145836353302002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" red="0.92156862745098034" green="0.92156862745098034" blue="0.92156862745098034" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R5g-ZW-KtE" customClass="CustomButton" customModule="FirebaseAuthenticationExample" customModuleProvider="target">
@@ -349,18 +349,40 @@
                                     <action selector="signOutPressed:" destination="Ji4-YQ-hG5" eventType="touchUpInside" id="eLz-mW-FYJ"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="chc-NX-gMD">
+                                <rect key="frame" x="97.5" y="55" width="180" height="180"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="180" id="SWJ-NK-yHO"/>
+                                    <constraint firstAttribute="width" constant="180" id="szC-IK-yYT"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BkT-aB-JaK">
+                                <rect key="frame" x="87.5" y="251" width="200" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="aIS-vL-VW0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" red="0.92156862745098034" green="0.92156862745098034" blue="0.92156862745098034" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.35682046413421631" green="0.3568871021270752" blue="0.35681626200675964" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="WNS-dr-cCN" firstAttribute="centerX" secondItem="ZeQ-cZ-jTy" secondAttribute="centerX" id="X8V-Gc-f1N"/>
                             <constraint firstItem="R5g-ZW-KtE" firstAttribute="leading" secondItem="ZeQ-cZ-jTy" secondAttribute="leadingMargin" constant="45" id="YIa-pk-u3H"/>
+                            <constraint firstItem="chc-NX-gMD" firstAttribute="top" secondItem="JTV-Wj-CIu" secondAttribute="bottom" constant="35" id="g1b-ka-mlD"/>
+                            <constraint firstItem="chc-NX-gMD" firstAttribute="centerX" secondItem="ZeQ-cZ-jTy" secondAttribute="centerX" id="j76-yg-53z"/>
+                            <constraint firstItem="BkT-aB-JaK" firstAttribute="top" secondItem="chc-NX-gMD" secondAttribute="bottom" constant="16" id="p1U-rQ-bSS"/>
                             <constraint firstItem="WNS-dr-cCN" firstAttribute="centerY" secondItem="ZeQ-cZ-jTy" secondAttribute="centerY" id="x3z-BI-jIX"/>
                             <constraint firstAttribute="trailingMargin" secondItem="R5g-ZW-KtE" secondAttribute="trailing" constant="45" id="xKr-pg-RVl"/>
                             <constraint firstItem="Rlk-P8-YCn" firstAttribute="top" secondItem="R5g-ZW-KtE" secondAttribute="bottom" constant="50" id="xQF-mc-3Xq"/>
+                            <constraint firstItem="BkT-aB-JaK" firstAttribute="centerX" secondItem="ZeQ-cZ-jTy" secondAttribute="centerX" id="yhW-HT-lZA"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="profileImage" destination="chc-NX-gMD" id="iEM-4n-pCz"/>
                         <outlet property="userLbl" destination="WNS-dr-cCN" id="CmN-QU-3eM"/>
+                        <outlet property="userNameLbl" destination="BkT-aB-JaK" id="Wip-S7-jPP"/>
                         <segue destination="jcf-64-690" kind="show" identifier="SocialLoginVC" id="nBa-gH-FjZ"/>
                     </connections>
                 </viewController>
